# photogen_app_v3

./: .gitignore  CLEANUP_SUMMARY.md  DEVELOPER_GUIDE_UV.md  DIMENSION_VERIFICATION_GUIDE.md  DOWNLOAD_BUTTON_FINAL_FIX.md  DOWNLOAD_CANVAS_FIXES.md  IMPROVED_API_ERROR_HANDLING.md  PRODUCT_DIMENSIONS_IMPLEMENTATION.md  QWEN_VL_MAX_SETUP.md  README.md  SCRIPTS_ORGANIZATION.md  STYLE_TRANSFER_GUIDE.md  UI_IMPROVEMENTS_SUMMARY.md  api_keys.json.enc  app.py  app_old.py  config.yaml  install-auto.bat  install-complete.bat  install-cpu.bat  install-gpu.bat  install.bat  install.sh  prompt_guide.md  prompt_history.json  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  rq.txt  run-photogen.bat  secret.key  test_all_create_mode_ratios.py  test_aspect_ratio_bug.py  test_cpu_compatibility.py  test_create_mode_bug.py  test_dimensions.py
assets/backgrounds/: README.md
assets/demo/: README.md
core/: constants.py  enhancer.py  generator.py  secure_storage.py  ui.py  ui_old.py  utils.py  vision.py  vision_streamlined.py
core/handlers/: auto_prompt_manager.py  canvas_manager.py  demo_handler.py  generation_manager.py  i2i_handler.py  state_manager.py  t2i_handler.py
debug/: create_coordinate_test.py  test_international_qwen.py  test_normal_clicking.py
prompt_template/: photo_frame.txt  selfie_background.txt
scripts/: VISION_TESTER_GUIDE.md  api_keys.json.enc  enhanced_style_transfer.py  secret.key  style_transfer_demo.py  style_transfer_gui.py  style_transfer_workflow.py  test_vision_setup.py  vision_tester.py
scripts/analysis/: batch_test_analyzer.py  simple_batch_analyzer.py
scripts/testing/: quick_start_batch_testing.py  verify_ai_vision_integration.py
test_images/: auto_prompt_report_20250806_092204.md  auto_prompt_report_20250806_092417.md  auto_prompt_report_20250806_093922.md  auto_prompt_test_results_20250806_092417.json  auto_prompt_test_results_20250806_093922.json  automated_vision_report_20250805_171943.md  manual_testing_instructions.md  manual_testing_template.json  test_plan.json  test_summary.md  testing_instructions.md  testing_quick_reference.md  vision_responses_20250805_170527.json  vision_responses_20250805_170944.json  vision_responses_20250805_171943.json  vision_responses_report_20250805_170527.md  vision_responses_report_20250805_170944.md  vision_responses_report_20250805_171943.md
test_images/object/: desktop.ini
tests/: batch_prompt_testing.py  test_api_keys.py
vision_test_results/: vision_test_20250811_161141.json  vision_test_20250811_163639.json
workflow diagram/: README.md  c4_architecture.md  class_diagram.md  sequence_diagram.md  workflow_overview.md
workflow diagram/archive/: README.md
