[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photogen-app"
version = "3.0.0"
description = "AI-powered photo generation and enhancement application"
authors = [
    {name = "PhotoGen Team", email = "contact@photogen.dev"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "image-generation", "photo-enhancement", "diffusion", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base dependencies - CPU only (API services)
dependencies = [
    "gradio>=5.41.1",
    "gradio-client>=1.11.0", 
    "fastapi>=0.116.1",
    "uvicorn>=0.24.0",
    "pillow>=9.3.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.8.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.3.0",
    "replicate>=0.25.0",
    "cryptography>=41.0.0",
    "keyring>=24.2.0",
]

[project.optional-dependencies]
# GPU support with CUDA and local model processing
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git@425a715e35479338c06b2a68eb3a95790c1db3c5",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "nunchaku @ git+https://github.com/mit-han-lab/nunchaku.git",
    "scipy>=1.11.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.17.0",
    "tokenizers>=0.14.0",
    "tqdm>=4.65.0",
]

# Development tools
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.0",
]

# All dependencies (GPU + development)
all = [
    "photogen-app[gpu,dev]"
]

[project.urls]
Homepage = "https://github.com/hooh777/photogen_app_v3"
Repository = "https://github.com/hooh777/photogen_app_v3"
Documentation = "https://github.com/hooh777/photogen_app_v3#readme"
Issues = "https://github.com/hooh777/photogen_app_v3/issues"

[project.scripts]
photogen = "app:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.tox
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | outputs
)/
'''

[tool.flake8] 
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "venv", 
    ".venv",
    "build",
    "dist",
    "outputs"
]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv/",
    ".venv/", 
    "build/",
    "dist/",
    "outputs/"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = ["Test*"]
python_functions = ["test_*"]
